# movie-recommender

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  models_loader.py
api/routers/: recommend.py
models/: movie_indices.csv
notebooks/: 01_eda.ipynb  02_content_tfidf.ipynb  03_content_embeddings_faiss.ipynb  04_collab_implicit.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb  02_content_tfidf-checkpoint.ipynb  03_content_embeddings_faiss-checkpoint.ipynb
scripts/: migrate_data.py
src/: db.py
src/models/: hybrid.py
tests/: test_api.py
